[gd_scene load_steps=2 format=3 uid="uid://pause_menu_scene"]

[ext_resource type="Script" path="res://ui/pause_menu.gd" id="1_pause_menu"]

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pause_menu")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.705882)

[node name="MenuContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="MenuContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "PAUSED"
horizontal_alignment = 1

[node name="BtnResume" type="Button" parent="MenuContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "RESUME"

[node name="BtnStats" type="Button" parent="MenuContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "STAT SHEET"

[node name="BtnQuit" type="Button" parent="MenuContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "QUIT TO MAIN MENU"

[node name="StatsPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="StatsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="StatsPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "GAME STATS"
horizontal_alignment = 1

[node name="Grid" type="GridContainer" parent="StatsPanel/VBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/h_separation = 30
theme_override_constants/v_separation = 10
columns = 5

[node name="BtnCloseStats" type="Button" parent="StatsPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "BACK TO MENU"
